# Prism-Engine

./: README.md
.cursor/rules/: proactive-thinker.mdc
.github/ISSUE_TEMPLATE/: action-item.md  decision.md  finding.md
docs/workflow-innovations/: README.md  git-metadata-spec.md
game-stack/: README.md  docker-compose.yml  package-lock.json  package.json
game-stack/.devcontainer/: Dockerfile  devcontainer.json
gists/: README.md  dlss-streamline-cvars.md  geometry-cache-import.py  pcg-spline-spawner.md  pixel-streaming-launch.bat  post-process-volume-drone-camera.md  render-target-paint.md  scene-capture-mirror.md  three-js-pixel-stream-receiver.html  unreal-claude-mcp-quickstart.md  widget-component-on-mesh.md
reference-code/cpp/: SimDataTypes.h  SimSphereActor.cpp  SimSphereActor.h
reference-code/rust-companion/: Cargo.toml
reference-code/rust-companion/src/: gpu.rs  main.rs  renderer.rs
reference-code/rust-companion/src/pipelines/: background.rs  bloom.rs  card.rs  color_wheel.rs  mod.rs
reference-code/rust-companion/src/shaders/: background.wgsl  bloom.wgsl  card.wgsl  color_wheel.wgsl
reference-code/rust-companion/src/tools/: color_wheel.rs  mod.rs
reference-code/rust-companion/src/ui/: card.rs  input.rs  launcher.rs  mod.rs
reference-code/sim/: WaveSolver.py  build_bp_omnisphere_instance.py  (+1 more)
research/: BLURFOCUS_SIM_STACK.md  BlurFocusMetaRuntime.html  BlurFocusSim_Editor.html  BlurFocusSim_PRD.html  Claude_Code_Environment_Setup.md  UE5_Capabilities_Guide.md  architecture.md  tool-catalog.md  vision.md  visual-identity.md
(+42 files in other folders)
